--- a/src/components/cards/Hand.css
+++ b/src/components/cards/Hand.css
@@ -56,12 +56,12 @@
 }
 
 .hand-sort-button-active {
-  background-color: #339af0;
+  background-color: #1971c2;
   color: white;
 }
 
 .hand-sort-button-active:hover {
-  background-color: #1c7ed6;
+  background-color: #1864ab;
 }
 
 .hand-row {
